--- a/css/style.css
+++ b/css/style.css
@@ -57,9 +57,49 @@ a {
   transform: translateY(3px);
 }
 
+#myVideo{
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  top:0;
+  right:0;
+  width: 100%;
+  height: 100%;
+  background-size: 100% 100%;
+  background-position: center center;
+  background-size: contain;
+  object-fit: cover; /*cover video background */
+  z-index:3;
+}
+
+#section0 .layer{
+  position: absolute;
+  z-index: 4;
+  width: 100%;
+  left: 0;
+  top: 25%;
+  overflow: hidden;
+
+  /*
+  * Preventing flicker on some browsers
+  * See http://stackoverflow.com/a/36671466/1081396  or issue #183
+  */
+  -webkit-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
+
+#section0{
+  overflow: hidden;
+}
+
 
 @media only screen and (min-width: 1281px) {
   .tourismNzLogo {
       width:5%;
   }
+
+  #section0 .layer{
+/* NOT WORKING */
+		top: 13%;
 }
