--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,30 @@
+// $mainFont-Family: 'Raleway', sans-serif;
+// $primaryColor: #517A52;
+// $secondaryColor: #FF5109;
+// $tertiaryColor: #629462;
+// $quaternaryColor: white;
+//
+// // Create mixin for buttons
+// @mixin tabletImgSize{
+//   height: 379px;
+//   width: 379px;
+// }
+
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+}
 
 /* ----------------------------- MAIN PAGE ---------------------------------  */
+
 /* COMPANY LOGO */
 .tourismNzLogo {
-  margin-bottom: 3%;
-  width: 15%;
-  height: auto; }
+    margin-bottom: 3%;
+    width:15%;
+    height: auto;
+}
 
 /* APP LOGO */
 .travelCompanionLogo {
@@ -17,11 +32,11 @@
   font-family: 'Pacifico', cursive;
   font-size: 8em;
   text-align: center;
-  background: -webkit-linear-gradient(#abecd6, #fbed96);
-  /*#FC5C7D, #efc125*/
+  background: -webkit-linear-gradient(#abecd6, #fbed96); /*#FC5C7D, #efc125*/
   line-height: 80%;
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent; }
+  -webkit-text-fill-color: transparent;
+}
 
 .subText {
   margin-top: 0.6em;
@@ -29,7 +44,8 @@
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
   font-weight: 300;
-  color: white; }
+  color: white;
+}
 
 /* SPALASH PAGE BUTTON */
 .exploreBtn {
@@ -44,6 +60,7 @@
   border: 1px solid white;
   border-radius: 2.1em;
   cursor: pointer;
+
   /* Transition effect */
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
@@ -51,33 +68,36 @@
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
   -webkit-transition-property: transform;
-  transition-property: transform; }
+  transition-property: transform;
+}
 
 .exploreBtn:hover, .exploreBtn:focus {
   -webkit-transform: scale(1.1);
-  transform: scale(1.1); }
+  transform: scale(1.1);
+}
 
 .exploreBtn:active {
   -webkit-transform: scale(0.9);
-  transform: scale(0.9); }
+  transform: scale(0.9);
+}
 
 /* BACKGROUND VIDEO */
-#myVideo {
+#myVideo{
   position: absolute;
   right: 0;
   bottom: 0;
-  top: 0;
-  right: 0;
+  top:0;
+  right:0;
   width: 100%;
   height: 100%;
   background-size: 100% 100%;
   background-position: center center;
   background-size: contain;
-  object-fit: cover;
-  /*cover video background */
-  z-index: 3; }
+  object-fit: cover; /*cover video background */
+  z-index:3;
+}
 
-#section0 .layer {
+#section0 .layer{
   position: absolute;
   z-index: 4;
   width: 100%;
@@ -85,28 +105,34 @@
   top: 16%;
   overflow: hidden;
   /* Preventing video flicker on some browsers*/
-  -webkit-transform: translate3d(0, 0, 0);
-  -ms-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0); }
+  -webkit-transform: translate3d(0,0,0);
+  -ms-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
+}
 
 /*VIDEO OVERFLOW*/
-#section0 {
-  overflow: hidden; }
+#section0{
+  overflow: hidden;
+}
 
 /* BOTTOM NAV */
-.fp-slidesNav.bottom {
-  bottom: 25px; }
+.fp-slidesNav.bottom{
+  bottom: 25px;
+}
 
 /* OPTIONAL MUST REMOVE LATER */
 .section {
-  text-align: center; }
+  text-align:center;
+}
+
 
 @media only screen and (min-width: 1281px) {
   .tourismNzLogo {
     margin-bottom: 1%;
-    width: 5%; }
+    width:5%;
+  }
 
-  #section0 .layer {
-    top: 13%; } }
-
-/*# sourceMappingURL=style.css.map */
+  #section0 .layer{
+	  top: 13%;
+  }
+}
