floated icon to right

--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,14 @@
   font-family: sans-serif; }
 
 /* ----------------------------- MAIN PAGE ---------------------------------  */
-/* COMPANY LOGO */
+.helpIcon {
+  float: right; }
+
 .tourismNzLogo {
   margin-bottom: 3%;
   width: 15%;
   height: auto; }
 
-/* APP LOGO */
 .travelCompanionLogo {
   padding: 19px 0 71px 0px;
   font-family: 'Pacifico', cursive;
@@ -31,7 +32,6 @@
   font-weight: 300;
   color: white; }
 
-/* SPALASH PAGE BUTTON */
 .exploreBtn {
   padding: 0.8em 1.7em;
   margin-bottom: 5px;
@@ -44,7 +44,6 @@
   border: 1px solid white;
   border-radius: 2.1em;
   cursor: pointer;
-  /* Transition effect */
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
   box-shadow: 0 0 1px rgba(0, 0, 0, 0);
@@ -61,7 +60,6 @@
   -webkit-transform: scale(0.9);
   transform: scale(0.9); }
 
-/* BACKGROUND VIDEO */
 #myVideo {
   position: absolute;
   right: 0;
@@ -89,15 +87,12 @@
   -ms-transform: translate3d(0, 0, 0);
   transform: translate3d(0, 0, 0); }
 
-/*VIDEO OVERFLOW*/
 #section0 {
   overflow: hidden; }
 
-/* BOTTOM NAV */
 .fp-slidesNav.bottom {
   bottom: 25px; }
 
-/* OPTIONAL MUST REMOVE LATER */
 .section {
   text-align: center; }
 
