--- a/css/style.css
+++ b/css/style.css
@@ -101,13 +101,13 @@
   overflow: hidden; }
 
 .modal-dialog {
-  margin: 12em auto;
+  margin: 10.4em auto;
   max-width: 589px; }
 
 .modal-content {
   border-radius: 2em; }
 
-hr {
+.hr {
   border-top: 0.1em solid #384059;
   opacity: 0.7;
   margin-top: 0;
@@ -119,8 +119,8 @@ hr {
   color: #384059; }
 
 .travelCompanionLogoModal {
-  padding: 0.6em 0;
-  margin: 0em auto;
+  padding: 1em 0;
+  margin: 0em 2em 0em 4.7em;
   font-size: 2.5em; }
 
 .modal-header {
@@ -131,6 +131,42 @@ hr {
     font-size: 2.5em;
     color: #384059;
     opacity: 1; }
+
+.fp-controlArrow.fp-prev {
+  border-color: transparent #384059 transparent transparent; }
+
+.fp-controlArrow.fp-next {
+  border-color: transparent transparent transparent #384059; }
+
+#slide1, #slide3 {
+  background-color: white; }
+
+#slide2, #slide4 {
+  background-color: #D66761; }
+
+.slideContainer {
+  margin-bottom: 15em; }
+
+.travelCompanionLogo2nd {
+  font-size: 2.5em; }
+
+.question {
+  font-weight: 600;
+  font-size: 2.250em;
+  color: #384059; }
+
+.dropDownOption {
+  border: 1px solid #384059;
+  margin: 4em auto 0 auto;
+  width: 50%;
+  color: #384059; }
+
+.checkInOut {
+  display: flex;
+  justify-content: center; }
+
+.label {
+  text-align: left; }
 
 .fp-slidesNav.bottom {
   bottom: 25px; }
