--- a/sass/style.scss
+++ b/sass/style.scss
@@ -134,7 +134,7 @@ $quaternaryColor: #EFC125;
 // HELP MODAL ------------------------------------------------------------------
 
 .modal-dialog {
-  margin: 12em auto;
+  margin: 10.4em auto;
   max-width: 589px;
 }
 
@@ -142,7 +142,7 @@ $quaternaryColor: #EFC125;
   border-radius: 2em;
 }
 
-hr {
+.hr {
   border-top: 0.1em solid $tertiaryColor;
   opacity: 0.7;
   margin-top: 0;
@@ -155,8 +155,8 @@ hr {
 }
 
 .travelCompanionLogoModal {
-  padding: 0.6em 0;
-  margin: 0em auto;
+  padding: 1em 0;
+  margin: 0em 2em 0em 4.7em;
   font-size: 2.5em;
 }
 
@@ -169,6 +169,56 @@ hr {
     color: $tertiaryColor;
     opacity: 1;
   }
+}
+
+// SLIDES OPTIONS
+
+.fp-controlArrow.fp-prev {
+  border-color: transparent $tertiaryColor transparent transparent;
+}
+
+.fp-controlArrow.fp-next {
+  border-color: transparent transparent transparent $tertiaryColor;
+}
+
+#slide1, #slide3 {
+  background-color: white;
+}
+
+#slide2, #slide4 {
+  background-color: $primaryColor;
+}
+
+
+// OPTIONS PAGE ------------------------------------------------------------------
+
+.slideContainer {
+  margin-bottom: 15em;
+}
+
+.travelCompanionLogo2nd {
+  font-size: 2.5em;
+}
+
+.question {
+  font-weight: 600;
+  font-size: 2.250em;
+  color: $tertiaryColor;
+}
+
+.dropDownOption {
+  border: 1px solid $tertiaryColor;
+  margin: 4em auto 0 auto;
+  width: 50%;
+  color: $tertiaryColor;
+}
+.checkInOut {
+  display: flex;
+  justify-content: center;
+}
+
+.label {
+  text-align: left;
 }
 
 // BOTTOM NAV ------------------------------------------------------------------
