--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,8 @@
 
 /* ----------------------------- MAIN PAGE ---------------------------------  */
 .body {
-  font-family: "Raleway", sans-serif; }
+  font-family: "Raleway", sans-serif;
+  font-size: 1.250em; }
 
 #helpLayer {
   top: 3%;
@@ -150,7 +151,7 @@
 .travelCompanionLogo2nd {
   font-size: 2.5em; }
 
-.question {
+.slideTitle {
   font-weight: 600;
   font-size: 2.250em;
   color: #384059; }
@@ -163,10 +164,30 @@
 
 .checkInOut {
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  margin-top: 2.5em; }
+
+.dropDownOption, .checkIn, .checkOut {
+  box-shadow: rgba(0, 0, 0, 0.2) -6px 7px 2px 0px; }
 
 .label {
   text-align: left; }
+
+.optionsFont {
+  margin-bottom: 0;
+  font-size: 2.250rem;
+  font-weight: 300;
+  color: white; }
+
+.daySelectedTitle {
+  margin-top: 1.5em; }
+
+.note {
+  margin-top: 3.5em; }
+
+.tick {
+  font-size: 8em;
+  color: white; }
 
 .fp-slidesNav.bottom {
   bottom: 25px; }
