--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,7 +6,6 @@ $quaternaryColor: #EFC125;
 //
 // Create mixin for buttons
 @mixin button{
-  padding: 0.6em 1.3em;
   margin-bottom: 0.1em;
   font-size: 1.2em;
   font-weight: 600;
@@ -55,7 +54,7 @@ $quaternaryColor: #EFC125;
 .travelCompanionLogo {
   padding: 19px 0 71px 0px;
   font-family: 'Pacifico', cursive;
-  font-size: 8em;
+  font-size: 7em;
   text-align: center;
   background: -webkit-linear-gradient(#abecd6, #fbed96); /*#FC5C7D, #efc125*/
   line-height: 80%;
@@ -69,22 +68,16 @@ $quaternaryColor: #EFC125;
   font-family: 'Raleway', sans-serif;
   font-size: 30px;
   font-weight: 300;
-  color: white;
+  color: $secondaryColor;
 }
 
 // SPALASH PAGE BUTTON ---------------------------------------------------------
+
 .exploreBtn {
-  padding: 0.8em 1.7em;
-  margin-bottom: 5px;
-  font-size: 1.5em;
-  font-weight: 600;
-  text-align: center;
-  text-decoration: none;
-  color: white;
-  background-color: rgba(0, 0, 0, 0);
-  border: 1px solid white;
-  border-radius: 2.1em;
-  cursor: pointer;
+  @include button;
+  padding: 0.7em 1.4em;
+  color: $secondaryColor;
+  border: 1px solid $secondaryColor;
 
    // Transition effect
   -webkit-transform: perspective(1px) translateZ(0);
@@ -142,7 +135,7 @@ $quaternaryColor: #EFC125;
 // HELP MODAL ------------------------------------------------------------------
 
 .modal-dialog {
-  margin: 10.4em auto;
+  margin: 8em auto;
   max-width: 589px;
 }
 
@@ -158,14 +151,14 @@ $quaternaryColor: #EFC125;
 }
 .modal-body {
   padding: 0em 2.5em 2.5em;
-  font-size: 1.250em;
+  font-size: 20px;
   color: $tertiaryColor;
 }
 
 .travelCompanionLogoModal {
-  padding: 1em 0;
-  margin: 0em 2em 0em 4.7em;
-  font-size: 2.5em;
+  padding: 1em 0 0.6em 0;
+  margin: 0em 1em 0em 4em;
+  font-size: 2.2em;
 }
 
 .modal-header {
@@ -189,16 +182,14 @@ $quaternaryColor: #EFC125;
   border-color: transparent transparent transparent $tertiaryColor;
 }
 
-#slide1, #slide3 {
+#slide1, #slide3, #section2 {
   color: $tertiaryColor;
-  background-color: white;
+  background-color: $secondaryColor;
 }
 
-#slide2, #slide4 {
+#slide2, #slide4, #section3 {
   color: $secondaryColor;
-  background-color: $primaryColor;
 }
-
 
 // GUESTS SLIDE--------------------------------------------------
 
@@ -210,7 +201,7 @@ $quaternaryColor: #EFC125;
   font-size: 2.5em;
 }
 
-.slideTitle {
+.mainTitle {
   font-weight: 600;
   font-size: 2.250em;
 }
@@ -258,10 +249,18 @@ $quaternaryColor: #EFC125;
   font-size: 8em;
 }
 
-.submitBtn {
+.submitBtn, .viewResultsBtn {
   @include button;
+  padding: 0.6em 1.3em;
   color: $quaternaryColor;
   border: 2px solid $quaternaryColor;
+}
+
+.check {
+  height: 18%;
+  width: auto;
+  margin-top: 1em;
+  margin-bottom: 2em;
 }
 
 .successNote {
@@ -269,8 +268,21 @@ $quaternaryColor: #EFC125;
   margin-bottom: 3em;
 }
 
-//------------------------------------------------------------------------------
+// SECTION 3 - MAP -------------------------------------------------------------
 
+ .map {
+   position: absolute;
+   top:0;
+   bottom:0;
+   left: 0;
+   right: 0;
+   // width: 100%;
+   // height: 50%;
+ }
+
+.mapboxgl-canvas {
+   position: static;
+ }
 
 // BOTTOM NAV ------------------------------------------------------------------
 .fp-slidesNav.bottom {
