--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@ $primaryColor: #D66761;
 $secondaryColor: white;
 $tertiaryColor: #384059;
 $quaternaryColor: #EFC125;
-//
+
 // Create mixin for buttons
 @mixin button{
   margin-bottom: 0.1em;
@@ -270,19 +270,27 @@ $quaternaryColor: #EFC125;
 
 // SECTION 3 - MAP -------------------------------------------------------------
 
- .map {
-   position: absolute;
-   top:0;
-   bottom:0;
-   left: 0;
-   right: 0;
-   // width: 100%;
-   // height: 50%;
- }
+.mapWrapper {
+  // background-color: pink;
+  margin: 1.9em auto;
+  width: 100%;
+  height: 50vh;
+}
+
+.map {
+ margin: 0 auto;
+ width: 100%;
+ height: 50vh;
+}
 
 .mapboxgl-canvas {
-   position: static;
- }
+  position: static !important;
+}
+
+i {
+  margin-right: 1em;
+  font-size: 1.250em;
+}
 
 // BOTTOM NAV ------------------------------------------------------------------
 .fp-slidesNav.bottom {
@@ -296,6 +304,7 @@ $quaternaryColor: #EFC125;
 
 
 @media only screen and (min-width: 1281px) {
+
   .tourismNzLogo {
     margin-bottom: 1%;
     width:5%;
@@ -304,4 +313,5 @@ $quaternaryColor: #EFC125;
   .layer{
 	  top: 13%;
   }
+
 }
