--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,6 +82,7 @@ $quaternaryColor: #EFC125;
 .exploreBtn {
   @include button;
   padding: 0.7em 1.4em;
+  margin: 0.4em;
   color: $secondaryColor;
   border: 1px solid $secondaryColor;
 
@@ -162,6 +163,7 @@ $quaternaryColor: #EFC125;
 }
 
 .travelCompanionLogoModal {
+  @include logo;
   padding: 1em 0 0.6em 0;
   margin: 0em 1em 0em 4em;
   font-size: 2.2em;
@@ -188,19 +190,19 @@ $quaternaryColor: #EFC125;
   border-color: transparent transparent transparent $tertiaryColor;
 }
 
-#slide1, #slide3, #section2 {
+#slide1, #slide3, #section3 {
   color: $tertiaryColor;
   background-color: $secondaryColor;
 }
 
-#slide2, #slide4, #section3 {
+#slide2, #slide4 {
   color: $secondaryColor;
 }
 
 // GUESTS SLIDE--------------------------------------------------
 
 .slideContainer {
-  margin-bottom: 15em;
+  margin-bottom: 8em;
 }
 
 .smallLogo {
@@ -233,7 +235,7 @@ $quaternaryColor: #EFC125;
   box-shadow: rgba(0, 0, 0, 0.2) -6px 7px 2px 0px;
 }
 
-.label {
+.labelAlign {
   text-align: left;
 }
 
@@ -251,30 +253,36 @@ $quaternaryColor: #EFC125;
   margin-top: 3.5em;
 }
 
-// SUCCESS SLIDE ---------------------------------------------------------------
-
-.tick {
-  font-size: 8em;
-}
-
+// MEAL OPTIONS ---------------------------------------------------------------
 .submitBtn, .viewResultsBtn {
   @include button;
   padding: 0.6em 1.3em;
+  margin-top: 1.5em;
+  // position: relative;
+  bottom: -3em;
   color: $quaternaryColor;
   border: 2px solid $quaternaryColor;
 }
 
+// VALIDATION ------------------------------------------------------------------
+.invalid-feedback {
+  margin-top: 1em;
+}
+
+
+// SUCCESS PAGE ---------------------------------------------------------------
+
 .check {
-  height: 18%;
+  height: 18vh;
   width: auto;
   margin-top: 1em;
   margin-bottom: 2em;
 }
 
-.successNote {
-  font-size: 1.2em;
-  margin-bottom: 3em;
-}
+// .successNote {
+//   font-size: 1.2em;
+//   margin-bottom: 3em;
+// }
 
 // SECTION 3 - MAP -------------------------------------------------------------
 
@@ -367,7 +375,6 @@ $quaternaryColor: #EFC125;
 .section {
   text-align:center;
 }
-
 
 @media only screen and (min-width: 1281px) {
 
