--- a/css/style.css
+++ b/css/style.css
@@ -234,10 +234,16 @@
   margin-top: 1em;
   margin-bottom: 2em; }
 
+#section3 .mainTitle {
+  text-align: center; }
+
 .mapWrapper {
   margin: 1.9em auto;
   width: 100%;
   height: 50vh; }
+
+.btnWrapper {
+  text-align: center; }
 
 .map {
   margin: 0 auto;
@@ -309,7 +315,7 @@
 .fp-slidesNav.bottom {
   bottom: 25px; }
 
-.section {
+#section0, #section1, #section2, #section4, #section5 {
   text-align: center; }
 
 @media only screen and (min-width: 1281px) {
