--- a/sass/style.scss
+++ b/sass/style.scss
@@ -273,6 +273,7 @@ $quaternaryColor: #EFC125;
 }
 
 // VALIDATION ------------------------------------------------------------------
+
 .invalid-feedback {
   margin-top: 1em;
 }
@@ -280,7 +281,6 @@ $quaternaryColor: #EFC125;
 .errorMessage {
   margin-top: 1em;
 }
-
 
 // SUCCESS PAGE ---------------------------------------------------------------
 
@@ -291,12 +291,13 @@ $quaternaryColor: #EFC125;
   margin-bottom: 2em;
 }
 
-// .successNote {
-//   font-size: 1.2em;
-//   margin-bottom: 3em;
-// }
-
 // SECTION 3 - MAP -------------------------------------------------------------
+
+#section3 {
+  .mainTitle {
+    text-align: center;
+  }
+}
 
 .mapWrapper {
   margin: 1.9em auto;
@@ -304,14 +305,14 @@ $quaternaryColor: #EFC125;
   height: 50vh;
 }
 
+.btnWrapper {
+  text-align: center;
+}
+
 .map {
  margin: 0 auto;
  width: 100%;
  height: 50vh;
-}
-
-.mapboxgl-canvas {
-  // position: static !important;
 }
 
 // SECTION 4 - RESULTS ---------------------------------------------------------
@@ -387,8 +388,8 @@ $quaternaryColor: #EFC125;
 }
 
 // OPTIONAL MUST REMOVE LATER --------------------------------------------------
-.section {
-  text-align:center;
+#section0, #section1, #section2, #section4, #section5{
+  text-align: center;
 }
 
 @media only screen and (min-width: 1281px) {
