--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,15 @@
   margin: 0;
   box-sizing: border-box; }
 
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url("http://www.downgraf.com/wp-content/uploads/2014/09/01-progress.gif?e44397") 50% 50% no-repeat #f9f9f9; }
+
 /* ----------------------------- MAIN PAGE ---------------------------------  */
 .body {
   font-family: "Raleway", sans-serif;
