--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,6 +32,14 @@ $quaternaryColor: #EFC125;
   box-sizing: border-box;
 }
 
+
+/* ----------------------------- MAIN PAGE ---------------------------------  */
+
+.body {
+  font-family: $mainFont-Family;
+  font-size: 1.250em;
+}
+
 .loader {
 	position: fixed;
 	left: 0px;
@@ -39,14 +47,16 @@ $quaternaryColor: #EFC125;
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url('http://www.downgraf.com/wp-content/uploads/2014/09/01-progress.gif?e44397') 50% 50% no-repeat rgb(249,249,249);
+  background-color: $secondaryColor;
 }
 
-/* ----------------------------- MAIN PAGE ---------------------------------  */
-
-.body {
-  font-family: $mainFont-Family;
-  font-size: 1.250em;
+.fa-spinner {
+  position: absolute;
+  top: 45%;
+  left: 43%;
+  font-size: 7em;
+  text-align: center;
+  color: #D66761;
 }
 
 // HELP ICON -------------------------------------------------------------------
@@ -59,7 +69,7 @@ $quaternaryColor: #EFC125;
   margin-right: 1em;
   float: right;
   font-size: 2.5em;
-  color: white;
+  color: $secondaryColor;
   background-color: transparent;
 }
 
@@ -404,12 +414,16 @@ $quaternaryColor: #EFC125;
 
 @media only screen and (min-width: 1281px) {
 
+  .fa-spinner {
+    left: 45%;
+  }
+
   .tourismNzLogo {
     margin-bottom: 1%;
     width:5%;
   }
 
-  .layer{
+  .layer {
 	  top: 13%;
   }
 
