--- a/sass/style.scss
+++ b/sass/style.scss
@@ -255,6 +255,11 @@ $quaternaryColor: #EFC125;
   box-shadow: rgba(0, 0, 0, 0.2) -6px 7px 2px 0px;
 }
 
+// Input background color
+.form-control[readonly] {
+  background-color: white;
+}
+
 .labelAlign {
   text-align: left;
 }
@@ -263,6 +268,10 @@ $quaternaryColor: #EFC125;
   margin-bottom: 0;
   font-size: 2.250rem;
   font-weight: 300;
+}
+
+.hello {
+  display: inline;
 }
 
 .daySelectedTitle {
