Added validation to dates slide. Cleaned up code. Fixed error of diffDays.

--- a/css/style.css
+++ b/css/style.css
@@ -220,8 +220,12 @@
 .daySelectedTitle {
   margin-top: 1.5em; }
 
+.nightsErrorMsg {
+  color: #DC1C0C;
+  font-weight: 400; }
+
 .note {
-  margin-top: 3.5em; }
+  margin-top: 2.5em; }
 
 .submitBtn, .viewResultsBtn {
   margin-bottom: 0.1em;
@@ -246,7 +250,8 @@
   transition-property: transform; }
 
 .invalid-feedback {
-  margin-top: 1em; }
+  margin-top: 1em;
+  color: #DC1C0C; }
 
 .errorMessage {
   margin-top: 1em; }
