Created function output user results on the results page. Created pseudo code for the total cost.

--- a/css/style.css
+++ b/css/style.css
@@ -315,8 +315,8 @@
   height: 302px;
   background-color: pink; }
 
-.subtitle {
-  font-size: 1em; }
+.subTitle {
+  display: inline; }
 
 #summary {
   text-align: left;
