--- a/sass/style.scss
+++ b/sass/style.scss
@@ -388,8 +388,9 @@ $quaternaryColor: #EFC125;
   }
 }
 
-.subtitle {
-  font-size: 1em;
+.subTitle {
+  // font-size: 1em;
+  display: inline;
 }
 
 #summary {
