--- a/css/style.css
+++ b/css/style.css
@@ -315,15 +315,20 @@
   height: 302px;
   background-position: center;
   background-size: cover;
-  background-color: pink; }
+  background-color: pink;
+  border: 3px solid white;
+  margin-bottom: 0px; }
 
 .subTitle {
   display: inline; }
 
 #summary {
   text-align: left;
-  width: 28em;
-  margin: 0 auto; }
+  width: 28.6em;
+  margin: 0 auto;
+  border: 4px solid white;
+  padding: 15px 27px 3px 34px;
+  background: white; }
 
 .resultsIcons {
   margin-right: 0.6em;
@@ -339,7 +344,8 @@
 .total {
   margin: 37px 0;
   display: inline;
-  font-size: 1.75rem; }
+  font-size: 1.75rem;
+  color: white; }
 
 .bookingInstructions {
   margin-top: 30px; }
