--- a/css/style.css
+++ b/css/style.css
@@ -278,6 +278,36 @@
   width: 100%;
   height: 50vh; }
 
+.accomModal .accomClose {
+  padding: 0.5em 0.6em 0 0; }
+.accomModal .modal-body {
+  padding-bottom: 0; }
+  .accomModal .modal-body .modal-title {
+    text-align: center;
+    font-weight: 600; }
+  .accomModal .modal-body .accomImg {
+    width: 100%; }
+  .accomModal .modal-body .modalAccomDetails {
+    margin-top: 1em;
+    margin-bottom: 0; }
+.accomModal .modal-footer {
+  padding: 2em;
+  border: none; }
+  .accomModal .modal-footer .bookNowBtn {
+    margin-bottom: 0.1em;
+    font-size: 1.2em;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
+    border-radius: 2.1em;
+    cursor: pointer;
+    font-size: 1em;
+    padding: 0.5em 3.3em;
+    margin: 0 auto;
+    color: #EFC125;
+    border: 2px solid #EFC125; }
+
 .row {
   margin-top: 2.3em; }
 
@@ -309,7 +339,7 @@
   color: #EFC125;
   border: 2px solid #EFC125; }
 
-.acomImgWrapper {
+.accomImg {
   margin: 0.9em auto;
   width: 573px;
   height: 302px;
@@ -328,7 +358,8 @@
   margin: 0 auto;
   border: 4px solid white;
   padding: 15px 27px 3px 34px;
-  background: white; }
+  background: white;
+  box-shadow: 9px 7px 72px -16px black; }
 
 .resultsIcons {
   margin-right: 0.6em;
