Filtering working now. geojson for accommodation is within one geojson. Added deatails for accommodation.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -350,6 +350,11 @@ $quaternaryColor: #EFC125;
  height: 50vh;
 }
 
+// .hideMarker {
+//   display: none;
+// }
+
+
 // ACCOMMODATION MODAL ---------------------------------------------------------
 
 .accomModal {
